Align build toolchain with target JAR